--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iced = "0.13.1"
+iced = {version = "0.13.1", features = ["canvas", "tokio", "debug"]}
+chrono = "0.4"
+tracing-subscriber = "0.3"
